--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
         trap "popd" EXIT
 
         mkdir -p $HOME/.kubepug
-        pushd $HOME/.v
+        pushd $HOME/.kubepug
 
         semver='^([0-9]+\.){0,2}(\*|[0-9]+)$'
         if [[ ${{ inputs.kubepug-release }} =~ $semver ]]; then
